Fix dark mode toggle and improve blog layout
- Exclude dark-mode-toggle from greedy-nav button styles in SCSS
- Move toggle button inside nav list for proper inline display
- Add table of contents and reading time to blog post
- Improve blog listing with tags, reading time, and dividers
- Add dark mode styles for archive links and page title

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -189,7 +189,7 @@
     }
   }
 
-  button {
+  button:not(.dark-mode-toggle) {
     position: absolute;
     height: 100%;
     right: 0;
